--- a/src/asset/index.less
+++ b/src/asset/index.less
@@ -2,6 +2,9 @@
   display: flex;
   flex-wrap: wrap;
   button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex: 1 0 auto;
     max-width: 10rem;
     min-width: 7rem;
